Bug 792928 - Don't select entire text when event offsets are out of bounds; r=masayuki